--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "semantic-ui-css": "2.4.1",
+    "semantic-ui-react": "2.0.3",
     "styled-components": "5.1.1",
     "yup": "0.29.3"
   },
